kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mini-java-app-service
  namespace: mini-java-app
  labels:
    app: mini-java-app
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  - port: 8081
    targetPort: 8081
    protocol: TCP
    name: management
  selector:
    app: mini-java-app
